--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -14,6 +14,7 @@
 	<description>commons</description>
 	
 	<properties>
+		<github.global.server>github</github.global.server>
 	</properties>
 	
 	<dependencies>
@@ -25,6 +26,14 @@
 		</dependency>
 	</dependencies>
 	
+	<distributionManagement>
+		<repository>
+			<id>internal.repo</id>
+			<name>Temporary Staging Repository</name>
+			<url>file://${project.build.directory}/mvn-repo</url>
+		</repository>
+	</distributionManagement>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -34,6 +43,32 @@
 					<source>1.7</source>
 					<target>1.7</target>
 				</configuration>
+			</plugin>
+			
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.12</version>
+				<configuration>
+					<message>deploy for ${project.version}</message>
+					<noJekyll>true</noJekyll>
+					<merge>false</merge>
+					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+					<branch>refs/heads/mvn-repo</branch>
+					<includes>
+						<include>**/*</include>
+					</includes>
+					<repositoryOwner>xunyss</repositoryOwner>
+					<repositoryName>commons</repositoryName>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>deploy</phase>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
