--- a/openssl/pom.xml
+++ b/openssl/pom.xml
@@ -7,13 +7,14 @@
 	
 	<groupId>org.xunyss.openssl</groupId>
 	<artifactId>openssl</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-RELEASE</version>
 	<packaging>jar</packaging>
 
 	<name>openssl</name>
 	<description>openssl</description>
 	
 	<properties>
+		<github.global.server>github</github.global.server>
 	</properties>
 	
 	<repositories>
@@ -40,7 +41,15 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
+	
+	<distributionManagement>
+		<repository>
+			<id>internal.repo</id>
+			<name>Temporary Staging Repository</name>
+			<url>file://${project.build.directory}/mvn-repo</url>
+		</repository>
+	</distributionManagement>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -50,6 +59,42 @@
 					<source>1.7</source>
 					<target>1.7</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<configuration>
+					<message>deploy for ${project.version}</message>
+					<noJekyll>true</noJekyll>
+					<merge>true</merge><!-- true: keep version history -->
+					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+					<branch>refs/heads/mvn-repo</branch>
+					<includes>
+						<include>**/*</include>
+					</includes>
+					<repositoryOwner>xunyss</repositoryOwner>
+					<repositoryName>commons</repositoryName>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>deploy</phase>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
