--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -5,7 +5,7 @@
 	
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>org.xunyss.commons</groupId>
+	<groupId>io.xunyss.commons</groupId>
 	<artifactId>commons</artifactId>
 	<version>0.5.1-RELEASE</version>
 	<packaging>jar</packaging>
