--- a/libs/pom.xml
+++ b/libs/pom.xml
@@ -34,6 +34,11 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>4.3.13.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>23.6-jre</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
