--- a/commons-base/pom.xml
+++ b/commons-base/pom.xml
@@ -6,12 +6,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<groupId>io.xunyss.commons</groupId>
-	<artifactId>commons</artifactId>
-	<version>0.5.1-RELEASE</version>
+	<artifactId>commons-base</artifactId>
+	<version>0.5.2-RELEASE</version>
 	<packaging>jar</packaging>
 
-	<name>commons</name>
-	<description>commons</description>
+	<name>commons-base</name>
+	<description>commons-base</description>
 	
 	<properties>
 		<github.global.server>github</github.global.server>
