--- a/commons-openssl/pom.xml
+++ b/commons-openssl/pom.xml
@@ -5,13 +5,13 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>io.xunyss.openssl</groupId>
-	<artifactId>openssl</artifactId>
-	<version>0.1.2-RELEASE</version>
+	<groupId>io.xunyss.commons</groupId>
+	<artifactId>commons-openssl</artifactId>
+	<version>0.1.3-RELEASE</version>
 	<packaging>jar</packaging>
 
-	<name>openssl</name>
-	<description>openssl</description>
+	<name>commons-openssl</name>
+	<description>commons-openssl</description>
 	
 	<properties>
 		<github.global.server>github</github.global.server>
@@ -31,8 +31,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>io.xunyss.commons</groupId>
-			<artifactId>commons</artifactId>
-			<version>0.5.1-RELEASE</version>
+			<artifactId>commons-base</artifactId>
+			<version>0.5.2-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
