--- a/commons-ref/pom.xml
+++ b/commons-ref/pom.xml
@@ -40,6 +40,11 @@
 			<version>1.4</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.5</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>4.3.13.RELEASE</version>
