--- a/commons-ref/pom.xml
+++ b/commons-ref/pom.xml
@@ -65,6 +65,11 @@
 			<artifactId>guava</artifactId>
 			<version>23.6-jre</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency>
 		<!--dependency>
 			<groupId>com.atlassian.localtunnel</groupId>
 			<artifactId>localtunnel-java-client</artifactId>
