--- a/commons-ref/pom.xml
+++ b/commons-ref/pom.xml
@@ -14,14 +14,14 @@
 	<description>commons-ref</description>
 	
 	<repositories>
-		<!--<repository>
+		<repository>
 			<id>atlassian</id>
 			<url>https://maven.atlassian.com/content/repositories/atlassian-public/</url>
 			<snapshots>
 				<enabled>true</enabled>
 				<updatePolicy>always</updatePolicy>
 			</snapshots>
-		</repository>-->
+		</repository>
 	</repositories>
 	
 	<dependencies>
@@ -70,11 +70,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.2</version>
 		</dependency>
-		<!--dependency>
+		<dependency>
 			<groupId>com.atlassian.localtunnel</groupId>
 			<artifactId>localtunnel-java-client</artifactId>
 			<version>0.4</version>
-		</dependency-->
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
