--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 	<parent>
 		<groupId>io.xunyss</groupId>
 		<artifactId>pom</artifactId>
-		<version>1.0.0-RELEASE</version>
+		<version>1.0.0</version>
 	</parent>
 	<groupId>io.xunyss.commons</groupId>
 	<artifactId>commons</artifactId>
-	<version>0.9.1-RELEASE</version>
+	<version>1.0.0-RELEASE</version>
 	<packaging>pom</packaging>
 	
 	<name>commons</name>
