--- a/commons-ref/pom.xml
+++ b/commons-ref/pom.xml
@@ -66,6 +66,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.2</version>
 		</dependency>
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.8</version>
+		</dependency>
 		<!--
 		<dependency>
 			<groupId>com.atlassian.localtunnel</groupId>
