--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	
 	<modules>
 		<module>commons-base</module>
-		<!--module>commons-ref</module-->
+		<module>commons-ref</module>
 	</modules>
 	
 	<properties>
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
